Fixed spacing for card css. Removed old parts of story file. Fixed bug in kiwi-toast that caused X to be misaligned and subtitle text to clip.

--- a/src/Components/Toast/kiwi-toast/kiwi-toast.scss
+++ b/src/Components/Toast/kiwi-toast/kiwi-toast.scss
@@ -26,6 +26,11 @@
 	z-index: 99999;
 }
 
+:host(:not([subtitle])) #main {
+	//If it is just one line of content then center the close button
+	align-items: center;
+}
+
 @keyframes main-animation {
 	0% {
 		opacity: 0;
@@ -107,9 +112,6 @@
 	@extend %body-m;
 	color: $with-color-below-500-faded;
 	display: none;
-	min-height: 1rem;
-	height: 1rem;
-	max-height: 1rem;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
